# powerpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  logW.cuh  main  main.cu  power_abc.cuh  result.txt  run_powerflow.ipynb
include/: ex1.cuh  graphgen.cuh  hw1.cuh  logW.cuh  power_abc.cuh  zysolver.cuh
problems/: ex1.cuh  ex2.cuh  hw1.cuh  hw2.cuh
src/: main.cu
